# running-routes

./: index.html
.github/workflows/: backend_unittests.yml  build.yml  build_and_deploy.yml
assets/: index.943f9708.js
backend/: README.md  app.py  dockerfile  pyproject.toml
backend/running_routes/: assembler.py  local_search.py  model.py  network.py  pipeline.py
backend/tests/: test_assembler.py  test_local_search.py  test_model.py  test_network.py  test_pipeline.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
