[tool.poetry]
name = "running-routes"
version = "0.1.0"
description = "Generates N routes of X meters"
authors = ["btang164"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
