[tool.poetry]
name = "running-routes"
version = "0.1.0"
description = "Generates N routes of X meters"
authors = ["btang164"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = "^3.8"
osmnx = "^1.1.2"
ortools = "^9.3.10497"
scikit-learn = "^1.0.2"
click = "^8.1.2"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
running-routes = "running_routes.pipeline:_cli"